tests/badcomment.err
3: error: unclosed comment
	int x = /*
	        ^
