tests/badcomment.juice
// unclosed multiline comment

int x = /*
